# win64intptrmarshallingfailed

./: ReadMe.md
cpp/: CMakeLists.txt  cppdll.cpp  cppdll.h
unity/Assets/: TestLoopBack.cs
unity/Assets/Debug/: cppdll.exp  cppdll.ilk  cppdll.lib
unity/Assets/Scenes/: SampleScene.unity
unity/ProjectSettings/: ProjectSettings.asset
